--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-opencv-python>=4.5
-pygame>=2.0
+beautifulsoup4~=4.13.4
 gTTS>=2.0
-pyzbar>=0.1.9
-pytesseract>=0.3.8
-ultralytics>=8.0
-requests>=2.25
-PyYAML~=6.0.2
-SpeechRecognition~=3.14.3
-numpy~=2.2.5
-pyttsx3~=2.98
 langchain~=0.3.25
-openai-whisper
+numpy~=2.2.5
+opencv-python>=4.5
+openai-whisper~=20240930
+pygame>=2.0
+PyYAML~=6.0.2
+pytesseract>=0.3.8
+pyttsx3~=2.98
+pyzbar>=0.1.9
+requests>=2.25
+scipy~=1.15.3
+sounddevice~=0.5.2
+SpeechRecognition~=3.14.3
 torch
-sounddevice
-scipy
-numpy
+ultralytics>=8.0
+
+pandas~=2.2.3
